# ros_course_ws

ros_basics/src/ros_actions/: CMakeLists.txt
ros_basics/src/ros_service/: CMakeLists.txt  package.xml
ros_basics/src/services_quiz/: CMakeLists.txt
ros_control/src/: pi_robot_v2.urdf
ros_control/src/my_controller/: CMakeLists.txt
ros_control/src/my_controller_pkg/: CMakeLists.txt  package.xml
ros_control/src/project_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
ros_control/src/project_controller/config/: project_controller.yaml
ros_control/src/project_controller/launch/: quiz_control_custom.launch
ros_control/src/project_controller/src/: custom_control.py  my_controller.cpp
ros_control/src/quiz_control/: package.xml
ros_tf/src/: frames.gv
ros_tf/src/my_pi_robot_tf/: CMakeLists.txt  package.xml
ros_tf/src/ros_tf_pkg/: CMakeLists.txt  package.xml
ros_tf/src/tf_quiz/: frames.gv
ros_urdf/src/my_gurdy_description/: CMakeLists.txt  package.xml
ros_urdf/src/my_jibo_description/: package.xml
src/actions_quiz/: CMakeLists.txt  package.xml
src/actions_quiz/launch/: action_custom_msg.launch
src/my_package/: CMakeLists.txt  package.xml
src/my_package/launch/: move_robot.launch
src/my_package/src/: counter_publisher.py  counter_subscriber.py  odom_subscriber.py
src/ros_actions/: package.xml
src/ros_service/src/: bb8_move_custom_service_server.py  bb8_move_in_circle_service_client.py  move_arm.py
src/services_quiz/: package.xml
src/services_quiz/launch/: call_bb8_move_in_square_custom_service_server.launch  (+1 more)
(+59 files in other folders)
